Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-56715

Building qdeclarativegeomap.cpp fails with Qt configured for -qreal float

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • 5.6.3
    • 5.6.2, 5.8.0 Beta
    • Build System, Charts, Location
    • None
    • Building on Ubuntu 14.04 using g++ for arm,
      arm-angstrom-linux-gnueabi-g++ (Linaro GCC 4.7-2013.07) 4.7.4 20130626

      Building for Desktop on Ubuntu 14.04 using default g++ 4.9.4

    Description

      I'm building Qt from the source package qt-everywhere-opensource-src-5.6.2.tar.gz. I'm configuring Qt to define qreal as float, as floats are significantly faster on the platform I am building this for.

      ./configure -qreal float etc

      This gives a compile error in qdeclarativegeomap.cpp as shown below. Isn't float supported for qreal anymore?

      '''
      qdeclarativegeomap.cpp: In member function ‘void QDeclarativeGeoMap::fitViewportToGeoShape()’:
      qdeclarativegeomap.cpp:893:38: error: no matching function for call to ‘qMax(qreal, double)’
      qdeclarativegeomap.cpp:893:38: note: candidate is:
      In file included from /home/xxx/qt-everywhere-opensource-src-5.6.2/qtbase/include/QtCore/qglobal.h:1:0,
                       from /home/xxx/src/pd/pdrepos02/scripts/qt/qt-everywhere-opensource-src-5.6.2/qtbase/include/QtCore/../../src/corelib/thread/qatomic.h:34,
                       from /home/xxx/qt-everywhere-opensource-src-5.6.2/qtbase/include/QtCore/qatomic.h:1,
                       from /home/xxx/qt-everywhere-opensource-src-5.6.2/qtbase/include/QtCore/../../src/corelib/kernel/qvariant.h:37,
                       from /home/xxx/qt-everywhere-opensource-src-5.6.2/qtbase/include/QtCore/qvariant.h:1,
                       from /home/xxx/qt-everywhere-opensource-src-5.6.2/qtbase/include/QtCore/QVariant:1,
                       from ../../location/maps/qgeoserviceprovider.h:40,
                       from qdeclarativegeomap_p.h:51,
                       from qdeclarativegeomap.cpp:37:
      /home/xxx/qt-everywhere-opensource-src-5.6.2/qtbase/include/QtCore/../../src/corelib/global/qglobal.h:547:34: note: template<class T> constexpr const T& qMax(const T&, const T&)
      /home/xxx/qt-everywhere-opensource-src-5.6.2/qtbase/include/QtCore/../../src/corelib/global/qglobal.h:547:34: note:   template argument deduction/substitution failed:
      qdeclarativegeomap.cpp:893:38: note:   deduced conflicting types for parameter ‘const T’ (‘float’ and ‘double’)
      make[4]: *** [.obj/qdeclarativegeomap.o] Error 1
      '''
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            paangele Paolo Angelelli
            pyrrhula Ola Røer Thorsen
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes