Fix compile error in candlestickchart when qreal is float

This fixes a compile error when building Qt with qreal as float.

Task-number: QTBUG-56715
Change-Id: I90045579e99ef49e39c21b1fb2061aed451796a7
Reviewed-by: Miikka Heikkinen <miikka.heikkinen@qt.io>